# asr-ime-fcitx

./: .gitignore  CMakeLists.txt  README.md  SKILL.md  asr_helper.py  asr_ime_app.py  bootstrap_install.sh  daemon_asr.py  fcitx_asr_engine.py  launch_app.sh  requirements.txt  run_engine.sh  settings_panel.py  setup.sh  start.sh
src/: CMakeLists.txt  asrime-addon.conf.in.in  asrime.conf.in  asrime.cpp
tests/: test_context_memory.py  test_smart_edit.py  test_tone_multilang.py  test_vosk_streaming.py
